# uav-h3-pathfinding

./: .gitignore  README.md  main.py  pyproject.toml
algorithms/: go.mod  go.sum
algorithms/cmd/experiment/: main.go
algorithms/cmd/test/: graph_test.go
algorithms/internal/benchmark/: full_result.go  test_mapper.go
algorithms/internal/collections/: min_heap.go  priority_queue.go  queue.go  stack.go
algorithms/internal/graph/: graph.go  mapper.go  node.go  parser.go
algorithms/internal/search/: a_star.go  bfs.go  dfs.go  gbfs.go  greedy_local_search.go  heuristic.go  interface.go  line_of_sight.go  result_interface_util.go  theta_star.go  ucs.go
algorithms/test/: collections_test.go  graph_test.go
analysis/: notebook.ipynb
data/processed/: master-obstacles.geojson  test_case_solvable.json
data/raw/: a.overpass-query.txt  batas-wilayah-semarang.geojson  gap-tower-sutt-semarang.geojson  gedung-tinggi-semarang.geojson  jalur-pacu-semarang.geojson  tower-sutt-semarang.geojson  zona-bandara-semarang.geojson  zona-militer-semarang.geojson  zona-penerbangan-ayani.geojson
data/result/: Allbenchmark.csv
preprocessing/: 00_master_obstacles.py  01_build_graph_map.py
test_cases/: 00_gen_test_case_solvable.py  01_convert_tcs_resol_10_11.py  test-case-solvable-res11.json
test_cases/backup/: test-case-solvable-res10.json  test-case-solvable-res9.json
